Add a firebase function to set timestamp to feedbacks

--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,11 @@
 {
   "hosting": {
     "public": "build",
-    // Add the "rewrites" section within "hosting"
-    "rewrites": [ {
-      "source": "**",
-      "destination": "/index.html"
-    } ]
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
