--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "firebase:deploy": "firebase deploy",
+    "firebase:deploy:hosting": "npm run build && firebase deploy --only hosting",
     "firebase:login": "firebase login --reauth"
   },
   "devDependencies": {
