--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eject": "react-scripts eject",
     "firebase:deploy": "npm run build && firebase deploy",
     "firebase:deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "firebase:deploy:functions": "npm run build && firebase deploy --only functions",
     "firebase:login": "firebase login --reauth"
   },
   "devDependencies": {
